# midizephyr

./: .gitmodules
.github/: CODEOWNERS  dependabot.yml
.github/workflows/: build.yml  c-cpp.yml  release.yaml
app/src/: usb_midi.c
kinesta/: CMakeLists.txt  pinout.ods  prj.conf
kinesta/src/: approxmath.c  approxmath.h  color.c  color.h  config.h  cos256f32.c  encoder.c  encoder.h  kinesta-mini.dts  kinesta.dts  kinesta_functional_block.c  kinesta_functional_block.h  kinesta_midi.c  kinesta_midi.h  lookup.h  main.c  rgb_pad.c  rgb_pad.h  touchpad.c  touchpad.h
kinesta_hw/: CMakeLists.txt  Kconfig
kinesta_hw/drivers/: encoder.c  touchpad_gpio.c  touchpad_pwm.c
kinesta_hw/dts/bindings/: duppa,i2cencoderv21.yaml  kinesta,functional-block.yaml  kinesta,midi-din.yaml  kinesta,rgb-touchpad-gpio.yaml  kinesta,rgb-touchpad-pwm.yaml
kinesta_hw/include/: color.h  encoder.h  touchpad.h
kinesta_hw/zephyr/: module.yml
midi-loopback/: CMakeLists.txt  prj.conf
midi-loopback/src/: main.c  usb-midi.dts
midizephyr/: CMakeLists.txt  prj.conf
midizephyr/src/: approxmath.c  approxmath.h  main.c  midi_shield.dts  strerrno.c  strerrno.h  usb-midi.dts  usb_midi.c  usb_midi.h
scripts/: graph_usb_midi_topology.py  test_usb_midi_loopback.py
usb_midi/: CMakeLists.txt  Kconfig
usb_midi/dts/bindings/: usb-midi-jack-in.yaml  usb-midi-jack-out.yaml
usb_midi/include/: usb_midi.h
usb_midi/subsys/usb/device/class/midi/: Kconfig  (+4 more)
usb_midi/zephyr/: CMakeLists.txt  Kconfig  module.yml  usb_midi.c  usb_midi.h
volcadrum/: CMakeLists.txt  prj.conf
volcadrum/src/: main.c
